# veritor

./: .gitignore  .sesskey  ANNOTATION_SYSTEM.md  BRITTLENESS_REPORT.md  CLAUDE.md  CURRENT_STATUS.md  GRAPH_SURGERY.md  GRAPH_SURGERY_IMPLEMENTATION.md  REQUEST_FOR_HELP.md  SPEC.md  WORKFLOW_SPEC.md  debug_ar_stablehlo.py  debug_lsh_focused.py  debug_lsh_systematic.py  pyproject.toml  test_ar_transformation.py  test_execute_surgery.py  test_graph_surgery.py  test_iree_approach.py  test_iree_graph_surgery.py  test_iree_simple.py  test_mlir_approach.py  verify_imports.py
examples/: inference_with_annotations.py
explore/: explore1.ipynb
scripts/: fasthtml_viewer.py
src/veritor/: PRODUCTION_GUIDE.md  README.md  __init__.py  accounting.py  api.py  challenger.py  data_models.py  ir_store.py  prover.py  sampling.py  transformation.py  utils.py  verify.py  veritor_tf_transform.py  veritor_tf_transform_simple.py
src/veritor/db/: api.py  (+3 more)
tests/: UNIFIED_ABSTRACTIONS.md  conftest.py  db_utils.py  test_annotation_system.py  test_autoregressive_inference.py  test_challenger.py  test_data_binding.py  test_distributed_inference.py  test_graph_surgery.py  test_graph_transform_brittleness.py  test_inference.py  test_ir_store.py  test_jax_stablehlo_io_equivalence.py  test_proper_responsibilities.py  test_refactored_prover.py  test_sampling.py  test_sampling_stress.py  test_simple_inference.py  test_simple_training.py  test_three_party_inference.py  test_three_party_inference_v2.py  test_training.py  test_transformation.py  test_unified_inference.py  test_unified_verification.py
(+26 files in other folders)
