[project]
name = "veritor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "danielreuter", email = "dreuter14@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax[metal]>=0.7.2",
    "python-fasthtml>=0.12.29",
    "tensorboard>=2.20.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
